--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,7 +5,7 @@
     padding: 0;
 }
 
-// $body-color: linear-gradient(rgba(12, 122, 100), rgba(48, 32, 72));
+// $bodyColor: linear-gradient(rgb(1, 32, 26), rgb(14, 2, 34));
 $displayFlex: flex;
 $displayGrid: grid;
 
