--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -7,6 +7,18 @@
 	h1 {
 		justify-content: center;
 	}
+
+	@media screen and (max-width: 800px) {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			height: 60px;
+        	padding: 10px;
+
+		.nav {
+			display: none;
+		}
+	}
 }
 
 .nav {
