--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -13,4 +13,6 @@ body {
     height: 100vh;
     font-family: 'Courier New', Courier, monospace;
     font-size: 0.8rem;
+	background-color: dimgray;
+	color: white;
 }
