update general page fontsize, added a custom button component to use CSS-in-JS (styled-components) in both education-experience and practical-experience components respectively

--- a/src/components/forms/education-experience/education-experience.styles.scss
+++ b/src/components/forms/education-experience/education-experience.styles.scss
@@ -5,9 +5,7 @@ $displayFlex: flex;
 	flex-direction: column;
 
 	.educational___experience___wrapper___buttons {
-		display: $displayFlex;
-		gap: 10px;
-		justify-content: flex-end;
+		text-align: right;
 	}
 }
 
