--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -3,10 +3,8 @@
 	align-items: center;
 	justify-content: space-between;
 	padding: 6px;
-
-	h1 {
-		justify-content: center;
-	}
+	border-bottom: 1px solid;
+	height: 60px;
 
 	@media screen and (max-width: 800px) {
 			display: flex;
@@ -14,6 +12,7 @@
 			justify-content: center;
 			height: 60px;
         	padding: 10px;
+			border-bottom: 1px solid;
 
 		.nav {
 			display: none;
