--- a/src/components/forms/practical-experience/practical-experience.styles.scss
+++ b/src/components/forms/practical-experience/practical-experience.styles.scss
@@ -5,9 +5,7 @@ $displayFlex: flex;
     flex-direction: column;
 
 	.practical___experience___wrapper___buttons {
-		display: $displayFlex;
-		gap: 10px;
-		justify-content: flex-end;
+		text-align: end;
 	}
 }
 
